tests/proph/creusot_dummy.stderr
warning: unused import: `Prophecised`
 --> ../tests/proph/creusot_dummy.rs:5:27
  |
5 | use gilogic::prophecies::{Prophecised, Ownable};
  |                           ^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

[TIMESTAMP WARN  lib_rtg::metadata] could not read metadata for crate `"std"`: Os { code: 2, kind: NotFound, message: "No such file or directory" }
[TIMESTAMP WARN  lib_rtg::metadata] could not read metadata for crate `"creusillian"`: Os { code: 2, kind: NotFound, message: "No such file or directory" }
error: non-local predicate "gilogic::prophecies::prophecy_auto_update_spec_070f7496_6ce1_4994_8b8e_b4d429061685::<T>"

error: aborting due to 1 previous error; 1 warning emitted

